src/test/deca/syntax/invalid/commentaire_lex_03.deca
// Description:
//    tests de programme correct lexicalement
//
// Resultats:
//    Ligne 11 : Erreur, commentaire non terminé
//
//
// Historique:
//    cree le 03/01/2023

/*un commentaire